# cherry

./: .gitignore  CMakeLists.txt  README.md  main.c  make.sh  make_android.sh  make_emscripten.sh  make_ios.sh  make_server.sh
application/: CMakeLists.txt  main.c
application_server/: CMakeLists.txt  main.c
audio/: CMakeLists.txt
data/res/shaders/: shader_color.vert
game/: CMakeLists.txt  deliver.c  element.c  game.c  game_level.c  game_node.c  game_setup.c  gametemp  gem.c  path.c
game_include/: game.h  game_setup.h  types.h
gfx/: CMakeLists.txt  action.c  branch_color.c  branch_transform.c  branch_z.c  buffer_collection.c  camera.c  conv.c  dae_mesh.c  descriptor_collection.c  graphic.c  light.c  mesh.c  node_3d_color.c  node_tree.c  render.c  shader.c  shader_3d_color.c  shader_color.c  shader_descriptor.c  shader_texture.c  shader_uniform.c  twig_3d_normal.c  twig_3d_texcoord.c  twig_3d_vertex.c  twig_bright.c  twig_texcoord.c  twig_texid.c  twig_texrange.c  twig_texroot.c  twig_vertex.c  twig_vertex_color.c
gfx/mtl/: buffer.m  image.m  metal.m  node_render.m  render_pass.m  renderer.m  shader.m  shader_descriptor.c  shader_descriptor_mtl.c  shader_uniform.c  shader_uniform_mtl.c  spine_extension.m  texture.m  uniform.m
gfx/ogl/: buffer.c  buffer_ogl.c  node_ogl_buffer.c  node_ogl_render.c  opengl.c  render_pass.c  render_pass_ogl.c  renderer.c  renderer_ogl.c  shader.c  shader_descriptor.c  shader_descriptor_ogl.c  shader_ogl.c  shader_uniform.c  spine_extension.c  texture.c  texture_ogl.c  uniform_ogl.c
gfx/sdl2/: image.c
gfx/shared/: camera.c  graphic.c  link_uniform.c  uniform.c  update_task.c
gfx/shared/node/: node.c  node_common_uniform.c  node_manager.c  node_render.c  node_spine.c  node_sprite.c  node_uniform.c
gfx/shared/shader/: shader_2d_texture_color.c
include/cherry/: array.h  bytes.h  ctype.h  list.h  lock.h  map.h  memory.h  platform.h  pool.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  types.h
include/cherry/audio/: audio.h  types.h
include/cherry/game/: connect_line.h  deliver.h  effect_star.h  element.h  game.h  gem.h  path.h  sprite_quad.h  sprite_quad_text.h  types.h
include/cherry/graphic/: camera.h  device_buffer.h  device_buffer_array.h  graphic.h  image.h  link_uniform.h  mesh.h  metal.h  node.h  node_manager.h  render.h  render_pass.h  shader.h  texture.h  types.h  uniform.h  update_task.h
include/cherry/graphic/buffer/: buffer_collection.h  types.h
include/cherry/graphic/dae/: dae_mesh.h  types.h
include/cherry/graphic/light/: light.h  types.h
include/cherry/graphic/node/: action.h  branch.h  conv.h  node_3d_color.h  node_tree.h  twig.h  types.h
include/cherry/graphic/shader/: descriptor_collection.h  shader_2d_texture_color.h  shader_collection.h  types.h
include/cherry/math/: mat3.h  mat4.h  math.h  quat.h  static.c  types.h  vec2.h  vec3.h  vec4.h
include/cherry/server/: file_descriptor.h  types.h  web_server.h
include/cherry/xml/: types.h  xml.h
ios-runtime-loading-dynamic-framework/DynamicFramework1/: DynamicFramework1.h
ios-runtime-loading-dynamic-framework/DynamicFramework2/: DynamicFramework2.h
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework/: AppDelegate.h  AppDelegate.m  GameControllerProtocol.h  Info.plist  main.m
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework.xcodeproj/: project.pbxproj
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework.xcodeproj/project.xcworkspace/xcshareddata/: ios-dynamic-loading-framework.xcscmblueprint
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework.xcodeproj/project.xcworkspace/xcuserdata/manh.xcuserdatad/: UserInterfaceState.xcuserstate
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework.xcodeproj/project.xcworkspace/xcuserdata/manhtran.xcuserdatad/: UserInterfaceState.xcuserstate
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework.xcodeproj/xcuserdata/manh.xcuserdatad/xcschemes/: DynamicFramework1.xcscheme  DynamicFramework2.xcscheme  ios-dynamic-loading-framework.xcscheme  xcschememanagement.plist
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework.xcodeproj/xcuserdata/manhtran.xcuserdatad/xcschemes/: DynamicFramework1.xcscheme  DynamicFramework2.xcscheme  ios-dynamic-loading-framework.xcscheme
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework/DynamicFramework1/: CASHello.h  CASHello.m  GameController.h  GameController.m  GameStoryBoard.storyboard  GameView.h  GameView.m
ios-runtime-loading-dynamic-framework/ios-dynamic-loading-framework/DynamicFramework2/: AppRenderer.h  AppRenderer.m  AppView.h  AppView.m  AppViewController.h  AppViewController.m  CASHello.h  CASHello.m  GameStoryBoard.storyboard  shader_cube.metal
kernel/: CMakeLists.txt  array.c  bytes.c  file.c  map.c  math.c  memory.c  metal.m  opengl.c  string.c
kernel/ios/: file.m  file_ios.m
kernel/linux/: file.c  file_linux.c
kernel/osx/: file.c
kernel/web/: file_web.c
res/: .gitignore
res/font/liberation_mono/: liberation_mono.fnt
res/font/liberation_mono_extend/: liberation_mono.fnt
res/font/liberation_serif/: liberation_serif.fnt
res/models/: cell_1.dae  gem_1.dae  pipe_1.dae  plane_1.dae
res/shaders/: shader_3d_color.frag  shader_3d_color.vert  shader_3d_color_web.frag  shader_3d_color_web.vert  shader_color.frag  shader_color.vert  shader_texture.frag  shader_texture.vert  temp_functions
res/shaders/common/: camera.slib  decode.slib  light.slib  matrix.slib  skin.slib  transform.slib
res/shaders/gles2/: shader_2d_texture_color.frag  shader_2d_texture_color.vert  shader_skin.vert
server/: CMakeLists.txt  file_descriptor.c  web_server.c
xml/: CMakeLists.txt  xml.c
